combine liwc and demo updates

--- a/_mak/mak_combined_features.qmd
+++ b/_mak/mak_combined_features.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Combining EMA, GPS, Monthly, & Demo Features"
-author: "Madison Herrmann and JJC"
+title: "Combining Messages & Demo Features"
+author: "Coco Yu, Madison Herrmann and JJC"
 date: "`r lubridate::today()`"
 format: 
   html: 
@@ -15,11 +15,8 @@ params:
 
 ## Status and Notes
 
-This file combines GPS, EMA, Monthly, & demographic features
+This file combines liwc & demographic features
 
-- 5/19/2025 Updated to add in Monthly and various checks by JJC
-- 5/22/2025  dropped diff features from monthly and some gps features
-- 6/12  - returned to 4x daily ema
 
 ## Set up
 
@@ -57,9 +54,8 @@ nrow(strat)
 
 Verify expected # of subids
 
-- EMA sample (151) for EMA and Monthly
-- GPS sample (154) for GPS
 - Full sample (154) for demos
+- Messages sample (150) for liwc
 
 ```{r}
 messages |> distinct(subid) |> nrow() 
@@ -69,9 +65,8 @@ strat |> distinct(subid) |> nrow()
 
 Look at features for each signal
 
-- EMA looks good 
-- GPS looks good
-- Monthly features
+- liwc looks good 
+
 ```{r}
 names(messages)[1:700]
 names(messages)[701:1399]
@@ -79,7 +74,7 @@ names(demos)
 names(strat)
 ```
 
-Join all files using left joins starting with GPS for that sample
+Join messages and demographics
 Also join in strat lh
 ```{r}
 nrow(messages)
