--- a/_mak/mak_best_config.qmd
+++ b/_mak/mak_best_config.qmd
@@ -11,8 +11,9 @@ format:
     embed-resources: true
 params:
   study: "messages"
+  batch: "liwc"
   version: "v1"
-  cv: "nested_1_x_10_3_x_10"
+  cv: "kfold_6_x_5"
   algorithms: "xgboost"   # "all" or name of specific algorithm
 editor_options: 
   chunk_output_type: console
@@ -31,6 +32,7 @@ editor_options:
 ### Study parameters
 ```{r}
 study <- params$study
+batch <- params$batch
 version <- params$version
 cv <- params$cv
 algorithms <- params$algorithms
@@ -44,6 +46,7 @@ algorithms <- params$algorithms
 options(conflicts.policy = "depends.ok")
 
 source("https://github.com/jjcurtin/lab_support/blob/main/format_path.R?raw=true")
+source("https://github.com/jjcurtin/lab_support/blob/main/fun_eda.R?raw=true")
 
 knitr::opts_chunk$set(attr.output='style="max-height: 500px;"')
 
@@ -57,16 +60,14 @@ library(tidyverse)
 
 theme_set(theme_classic())
 
-devtools::source_url("https://github.com/jjcurtin/lab_support/blob/main/fun_eda.R?raw=true")
 ```
 
 ### Paths
 ```{r}
 #| message: false
 
-path_input <- format_path(str_c("studydata/risk/chtc/", study))
-path_models <- format_path(str_c("studydata/risk/models/", study))
-path_output <- format_path(str_c("studydata/risk/chtc/", study))
+path_models <- format_path(str_c("risk/models/", study))
+path_output <- format_path(str_c("risk/chtc/", study))
 
 ```
 
@@ -76,47 +77,33 @@ path_output <- format_path(str_c("studydata/risk/chtc/", study))
 
 Get batch name from above-specified model parameters.
 ```{r}
-batch_name_1 <- str_c("train_", algorithms, "_", cv, "_", version, "_message")
-batch_name_2 <- str_c("train_", algorithms, "_", cv, "_", version, "_doc")
+batch_name <- str_c("train_", algorithms, "_", cv, "_", version, "_", batch)
 ```
 
 Load in results file.
 ```{r}
-results_1 <- read_csv(here::here(path_input, batch_name_1, "output", "batch_results.csv"),
-                        show_col_types = FALSE)
-results_2 <- read_csv(here::here(path_input, batch_name_2, "output", "batch_results.csv"),
+results <- read_csv(here::here(path_output, batch_name, "output", "batch_results.csv"),
                         show_col_types = FALSE)
 
-results_all <- results_1 |> 
-  bind_rows(results_2)
 ```
 
 Conduct final checks -- we expect to see results split evenly among possible hyperparameter combinations, resampling techniques, etc. If these numbers are not even, that suggests there may be a problem.
 ```{r}
-  results_all |> tab(outer_split_num) |> print()
-  results_all |> tab(inner_split_num) |> print()
-  results_all |> tab(algorithm) |> print()
-  results_all |> tab(feature_set) |> print()
-  results_all |> tab(hp1) |> print()
-  results_all |> tab(hp2) |> print()
-  results_all |> tab(hp3) |> print()
-  results_all |> tab(resample) |> print()
-```
-
-Following basic checks, save raw metrics file into the models folder on the server.
-```{r}
-results_all |>
-  arrange(split_num, outer_split_num, inner_split_num, algorithm, resample) |> 
-  write_csv(here::here(path_models, str_c("inner_metrics_",
-                                             version, "_",
-                                             cv, ".csv")))
+  results |> tab(outer_split_num) |> print()
+  results |> tab(inner_split_num) |> print()
+  results |> tab(algorithm) |> print()
+  results |> tab(feature_set) |> print()
+  results |> tab(hp1) |> print()
+  results |> tab(hp2) |> print()
+  results |> tab(hp3) |> print()
+  results |> tab(resample) |> print()
 ```
 
 ## Identify best configuration
 
 Summarize median auROCs by model parameters.
 ```{r}
-metrics_avg <- results_all |> 
+metrics_avg <- results |> 
   group_by(algorithm, feature_set, hp1, hp2, hp3, resample) |> 
    summarize(median_roc_auc = median(roc_auc),
              n_folds = n(), .groups = "drop") |> 
@@ -128,33 +115,34 @@ metrics_avg <- results_all |>
 Check to make sure summarized tibble looks accurate.
 ```{r}
 metrics_avg |> 
-  slice(1:50) |> 
+  slice(1:50) |> view()
   print_kbl()
 ```
 
 Pull out best configuration from metrics_avg and save out results for best configuration into models folder on server.
+COCO - change the file name, write out csv
 ```{r}
 best_config <- metrics_avg |> 
   slice(1) |> 
   print()
 
-results_all |> 
-  filter(algorithm == best_config$algorithm,
-         feature_set == best_config$feature_set,
-         hp1 == best_config$hp1,
-         hp2 == best_config$hp2,
-         hp3 == best_config$hp3,
-         resample == best_config$resample) |> 
-  write_csv(here::here(path_models, str_c("best_config_",
-                                             version, "_",
-                                             cv, ".csv")))
+# results |> 
+#   filter(algorithm == best_config$algorithm,
+#          feature_set == best_config$feature_set,
+#          hp1 == best_config$hp1,
+#          hp2 == best_config$hp2,
+#          hp3 == best_config$hp3,
+#          resample == best_config$resample) |> 
+#   write_csv(here::here(path_models, str_c("best_config_",
+#                                              version, "_",
+#                                              cv, ".csv")))
 ```
 
 
 ## Plot hyperparameters
 
 Ensure that you have assessed a wide enough range of hyperparameters.
-```{r}
+```
 # update algorithms to actual ones in the tibble
 algorithms <- unique(metrics_avg$algorithm) 
 feature_sets <- unique(metrics_avg$feature_set) 
