--- a/_mak/mak_meta/lasso_baseline.qmd
+++ b/_mak/mak_meta/lasso_baseline.qmd
@@ -27,8 +27,8 @@ theme_set(theme_classic())
 
 source("https://github.com/jjcurtin/lab_support/blob/main/format_path.R?raw=true")
 
-path_shared <- format_path(str_c("risk/data_processed/shared/"))
-path_messages <- format_path(str_c("risk/data_processed/messages/")) 
+path_shared <- format_path(str_c("risk/data_processed/shared"))
+path_messages <- format_path(str_c("risk/data_processed/messages")) 
 ```
 
 ## Read in data
@@ -40,7 +40,7 @@ baseline <- read_csv(here::here(path_shared, "features_baseline.csv"),
                   show_col_types = FALSE) |> 
   filter(subid %in% study_dates$subid) |> 
   # select scaled and other scores not in raw data
-  select(days_abstinent, dsm5_total:efficacy_craving, stress_total:social_support_so)
+  select(subid, days_abstinent, dsm5_total:efficacy_craving, stress_total:social_support_so)
 
 intake <- read_csv(here::here(path_shared, "intake.csv"),
                   show_col_types = FALSE) |> 
@@ -50,23 +50,21 @@ intake <- read_csv(here::here(path_shared, "intake.csv"),
 screen <- read_csv(here::here(path_shared, "screen.csv"),
                   show_col_types = FALSE) |> 
   filter(subid %in% study_dates$subid) |> 
-  select(-c(2:6)) |> 
-  mutate(across(mps_1:mps_155, ~if_else(.x == TRUE,1, 0)))
+  select(-c(2:6), -starts_with("mps_"), -starts_with("auh_8"))
 
 feats <- baseline |> 
   left_join(intake, by = "subid") |> 
   left_join(screen, by = "subid")
 
-lapses <- read_csv(here::here(path_shared, "lapses.csv"),
+labels <- read_csv(here::here(path_shared, "labels_messages_day_24h.csv"),
+                  show_col_types = FALSE) |> 
+  select(-c(day_start, day_end)) |> 
+  mutate(lapse = factor(lapse, levels = c("lapse", "no lapse")))
+
+strat <- read_csv(here::here(path_shared, "strat_lh.csv"),
                   show_col_types = FALSE)
 ```
 
-Add outcome to features (lapse on study)
-```{r}
-feats <- feats |> 
-  mutate(y = if_else(subid %in% lapses$subid, "lapse", "no lapse"),
-         y = factor(y, levels = c("lapse", "no lapse")))
-```
 
 Remove feats with more than 10% missing data
 ```{r}
@@ -78,10 +76,19 @@ feats <- feats |>
   select(-c(contains(feats_missing)))
 ```
 
+Add outcome and strat var
+```{r}
+data <- labels |> 
+  left_join(feats, by = "subid") |> 
+  left_join(strat, by = "subid")
+```
+
+
 Convert string variables to factor
 ```{r}
-feats <- feats |> 
-  mutate(across(where(is.character), ~factor(.x)))
+data <- data |> 
+  mutate(across(where(is.character), ~factor(.x))) |> 
+  rename(y = lapse)
 ```
 
 
@@ -90,8 +97,8 @@ feats <- feats |>
 
 Recipe
 ```{r}
-rec <- recipe(y ~ ., data = feats) |> 
-  step_rm(subid) |> 
+rec <- recipe(y ~ ., data = data) |> 
+  step_rm(subid, dttm_label, strat) |> 
   step_zv(all_predictors()) |> 
   step_impute_median(all_numeric_predictors()) |> 
   step_impute_mode(all_nominal_predictors()) |> 
@@ -104,7 +111,7 @@ rec <- recipe(y ~ ., data = feats) |>
 Splits
 ```{r}
 set.seed(102030)
-splits <- vfold_cv(feats, v = 5, strata = y)
+splits <- group_vfold_cv(data, v = 5, group = "subid", strata = strat)
 ```
 
 Fit models
@@ -122,7 +129,7 @@ models <- logistic_reg(penalty = tune(),
                   metrics = metric_set(roc_auc))
 ```
 
-Get best lambda
+Get best lambda and alpha
 ```{r}
 best_model <- select_best(models, metric = "roc_auc")
 
@@ -132,10 +139,10 @@ show_best(models, metric = "roc_auc")
 Fit final model 
 ```{r}
 rec_prepped <- rec |> 
-    prep(training = feats)
+    prep(training = data)
 
 feat_all <- rec_prepped |> 
-    bake(new_data = feats)
+    bake(new_data = data)
 
 fit_best <- logistic_reg(penalty = best_model$penalty,
                          mixture = best_model$mixture) |> 
@@ -144,12 +151,50 @@ fit_best <- logistic_reg(penalty = best_model$penalty,
         fit(y ~ ., data = feat_all)
 ```
 
-Get retained features
+of 1121 features, 47 were retained
+```{r}
+tidy(fit_best) |> 
+  filter(term != "(Intercept)", estimate != 0) |> 
+  nrow()
+```
+ 
+8 features have estimates > |.1|
+
 ```{r}
 tidy(fit_best) |> 
   filter(term != "(Intercept)", estimate != 0) |> 
   arrange(desc(abs(estimate))) |> 
+  filter(abs(estimate) > .1) |> 
   print(n = Inf)
+```
+
+save out best features  
+
+- yap_1 - Have you driven a car when you knew you had too much to drink to drive safely? (lifetime endorsement and past year frequency)
+- mam_23 - In the next 30 days, how confident are you in your ability to be completely abstinent from alcohol?
+- dass21_15 - In the past month, I felt I was close to panic.
+- mspss_1 - There is a special person who is around when I am in need.
+- mam_22 - Is your goal still to remain abstinent in the future?
+- yap_13 - Have you ever neglected your obligations, your family, your work, or school work for two or more days in a row because of your drinking? 
+- qol_13 - How satisfied are you with the conditions of your neighborhood?
+- fad_38 - We [my family] resolve most emotional upsets that come up. 
+
+```{r}
+feats_retained <- tidy(fit_best) |> 
+  filter(term != "(Intercept)", estimate != 0) |> 
+  filter(abs(estimate) > .1) |> 
+  mutate(term = str_replace(term, "_[^_]+$", "")) |> 
+  pull(term)
+
+data <- data |> 
+  select(subid, 
+         all_of(feats_retained)) |> 
+  unique()
+
+(missing_features <- setdiff(feats_retained, colnames(data)))
+
+data |> 
+  write_csv(here::here(path_messages, "features_meta_day_24h_v6_baseline.csv"))
 ```
 
 
