--- a/_mak/mak_meta/1_metrics_inner.qmd
+++ b/_mak/mak_meta/1_metrics_inner.qmd
@@ -11,10 +11,10 @@ format:
     embed-resources: true
 params:
   study: "messages"
-  version: "v12"
+  version: "v13"
   cv: "kfold"
   algorithms: "random_forest"   # "all" or name of specific algorithm
-  model: "meta_stratified_reduced" # "main" or "baseline"
+  model: "meta_stratified" # "main" or "baseline"
 editor_options: 
   chunk_output_type: console
 ---
