--- a/notebooks/ana_bayesian.qmd
+++ b/notebooks/ana_bayesian.qmd
@@ -38,24 +38,24 @@ test_metrics_baseline <- read_csv(here::here(path_models,
   select(split_num, "baseline model" = roc_auc) |> 
   arrange(split_num)
 
-test_metrics_meta <- read_csv(here::here(path_models, 
-                                       "best_config_v17_kfold_meta.csv"),
-                            show_col_types = FALSE) |> 
-  select(split_num, "metadata model" = roc_auc) |> 
-  arrange(split_num)
-
-test_metrics_passive <- read_csv(here::here(path_models,
-                                    "best_config_v17_kfold_passive.csv"),
-                            show_col_types = FALSE) |>
-  select(split_num, "passive metadata model" = roc_auc) |>
-  arrange(split_num)
+# test_metrics_meta <- read_csv(here::here(path_models, 
+#                                        "best_config_v17_kfold_meta.csv"),
+#                             show_col_types = FALSE) |> 
+#   select(split_num, "metadata model" = roc_auc) |> 
+#   arrange(split_num)
+# 
+# test_metrics_passive <- read_csv(here::here(path_models,
+#                                     "best_config_v17_kfold_passive.csv"),
+#                             show_col_types = FALSE) |>
+#   select(split_num, "passive metadata model" = roc_auc) |>
+#   arrange(split_num)
 
 
 
 test_metrics_all <- test_metrics_full |> 
   left_join(test_metrics_baseline, by = c("split_num")) |> 
-  left_join(test_metrics_meta, by = c("split_num")) |>
-  left_join(test_metrics_passive, by = c("split_num")) |>
+  # left_join(test_metrics_meta, by = c("split_num")) |>
+  # left_join(test_metrics_passive, by = c("split_num")) |>
   mutate(fold_num = rep(1:5, 6),
          repeat_num = c(rep(1, 5), rep(2, 5), rep(3, 5), 
                         rep(4, 5), rep(5, 5), rep(6, 5))) |> 
@@ -106,78 +106,30 @@ pp_perf_tibble
 
 
 
-<!-- ### Model Comparisons -->
+### Model Comparison
 
-<!-- #### Baseline Contrasts -->
+```{r}
 
-<!-- ```{r} -->
+ci_baseline <- pp |>
+  contrast_models(list("full model"),
+                  list("baseline model")) |>
+  summary(size = 0) |> 
+  mutate(probability = 1 - probability,
+         contrast = "full model vs. baseline model")
 
-
-<!-- ci_baseline <- pp |> -->
-<!--   contrast_models(list("lag24", "lag72", "lag168", "lag336"),  -->
-<!--                   list("lag0", "lag0", "lag0", "lag0")) |>  -->
-<!--   summary(size = 0) |>  -->
-<!--   mutate(contrast = factor(contrast,  -->
-<!--                            levels = c("lag24 vs lag0", "lag72 vs lag0", "lag168 vs lag0",  -->
-<!--                                       "lag336 vs lag0"), -->
-<!--                            labels = c("24 vs. 0", "72 vs. 0",  -->
-<!--                                       "168 vs. 0", "336 vs. 0")), -->
-<!--          probability = 1 - probability) -->
-
-<!-- ci_median_baseline <- pp |>  -->
-<!--   contrast_models(list("lag24", "lag72", "lag168", "lag336"),  -->
-<!--                   list("lag0", "lag0", "lag0", "lag0")) |>   -->
-<!--   group_by(contrast) |>  -->
-<!--   summarize(median = quantile(difference, .5)) |>  -->
-<!--   mutate(contrast = factor(contrast,  -->
-<!--                            levels = c("lag24 vs. lag0", "lag72 vs. lag0", "lag168 vs. lag0",  -->
-<!--                                       "lag336 vs. lag0"), -->
-<!--                            labels = c("24 vs. 0", "72 vs. 0",  -->
-<!--                                       "168 vs. 0", "336 vs. 0"))) -->
+ci_median_baseline <- pp |>
+  contrast_models(list("full model"),
+                  list("baseline model")) |>
+  group_by(contrast) |>
+  summarize(median = quantile(difference, .5)) 
 
 
-<!-- ci_baseline <- ci_baseline |>  -->
-<!--   left_join(ci_median_baseline, by = c("contrast"))  -->
+ci_baseline <- ci_baseline |>
+  left_join(ci_median_baseline, by = c("contrast"))
 
-<!-- ci_baseline |>  -->
-<!--   write_csv(here::here(path_models, "contrast_baseline.csv")) -->
+ci_baseline |>
+  write_csv(here::here(path_models, "contrast_baseline.csv"))
 
-<!-- ci_baseline -->
+ci_baseline
 
-<!-- ``` -->
-
-
-<!-- #### Adjacent Contrasts -->
-
-<!-- ```{r} -->
-<!-- ci_lag <- pp |> -->
-<!--   contrast_models(list("lag72", "lag168", "lag336"),  -->
-<!--                   list("lag24", "lag72", "lag168")) |>  -->
-<!--   summary(size = 0) |>  -->
-<!--   mutate(contrast = factor(contrast,  -->
-<!--                            levels = c("lag72 vs lag24", "lag168 vs lag72",  -->
-<!--                                       "lag336 vs lag168"), -->
-<!--                            labels = c("72 vs. 24", "168 vs. 72", "336 vs. 168")), -->
-<!--          probability = 1 - probability) -->
-
-<!-- ci_median_lag <- pp |>  -->
-<!--   contrast_models(list("lag72", "lag168", "lag336"),  -->
-<!--                   list("lag24", "lag72", "lag168")) |>  -->
-<!--   group_by(contrast) |>  -->
-<!--   summarize(median = quantile(difference, .5)) |>  -->
-<!--   mutate(contrast = factor(contrast,  -->
-<!--                            levels = c("lag72 vs. lag24", "lag168 vs. lag72",  -->
-<!--                                       "lag336 vs. lag168"), -->
-<!--                            labels = c("72 vs. 24", "168 vs. 72", "336 vs. 168"))) -->
-
-<!-- ci_lag <- ci_lag |>  -->
-<!--   left_join(ci_median_lag, by = c("contrast")) |>  -->
-<!--   arrange(contrast) -->
-
-<!-- ci_lag |>  -->
-<!--   write_csv(here::here(path_models, "contrast_adjacent.csv")) -->
-
-<!-- ci_lag -->
-<!-- ``` -->
-
-
+```
